[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/ornate_pixelart_theme/ornate-theme-release.tres" type="Theme" id=2]
[ext_resource path="res://assets/main_illustration/esper_illustration.jpg" type="Texture" id=3]
[ext_resource path="res://assets/btn_group/new_buttongroup.tres" type="ButtonGroup" id=4]
[ext_resource path="res://assets/themes/ornate_pixelart_theme/pixelplay.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -99.0 ]
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 241.0
margin_bottom = 135.0

[node name="Panel" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
margin_right = 111.0
margin_bottom = 120.0
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
margin_right = 111.0
margin_bottom = 22.0
bbcode_enabled = true
bbcode_text = "[center][wave amp=15.0 freq=2.0]~ Esper ~[/wave][/center]"
text = "~ Esper ~"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 26.0
margin_right = 111.0
margin_bottom = 55.0

[node name="BeginBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer"]
margin_left = 37.0
margin_right = 73.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Begin"

[node name="CenterContainer3" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 111.0
margin_bottom = 88.0

[node name="OptionsBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer3"]
margin_left = 33.0
margin_right = 77.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="CenterContainer2" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 111.0
margin_bottom = 121.0

[node name="QuitBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer2"]
margin_left = 41.0
margin_right = 70.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -3

[node name="MapSizeTitle" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2"]
margin_right = 111.0
margin_bottom = 22.0
bbcode_enabled = true
bbcode_text = "[center]Map Size[/center]"
text = "Map Size"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2"]
margin_top = 19.0
margin_right = 111.0
margin_bottom = 47.0

[node name="SizeSmallBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer"]
margin_left = 41.0
margin_right = 70.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
group = ExtResource( 4 )
text = "Small"

[node name="CenterContainer2" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2"]
margin_top = 44.0
margin_right = 111.0
margin_bottom = 72.0

[node name="SizeMedBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer2"]
margin_left = 37.0
margin_right = 74.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
group = ExtResource( 4 )
text = "Medium"

[node name="CenterContainer3" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2"]
margin_top = 69.0
margin_right = 111.0
margin_bottom = 97.0

[node name="SizeLargeBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer3"]
margin_left = 40.0
margin_right = 70.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
group = ExtResource( 4 )
text = "Large"

[node name="CenterContainer4" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2"]
margin_top = 94.0
margin_right = 111.0
margin_bottom = 124.0

[node name="BackBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer4"]
margin_left = 39.0
margin_right = 72.0
margin_bottom = 30.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
group = ExtResource( 4 )
text = "Back"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -7.0
custom_constants/separation = -3

[node name="OptionsTitle" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3"]
margin_right = 96.0
margin_bottom = 22.0
bbcode_enabled = true
bbcode_text = "[center]Options[/center]"
text = "Options"
fit_content_height = true

[node name="MusicCHBTN" type="CheckButton" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3"]
margin_top = 19.0
margin_right = 96.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
pressed = true
enabled_focus_mode = 0
text = "Sound Effects"

[node name="SfxCHBTN" type="CheckButton" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3"]
margin_top = 45.0
margin_right = 96.0
margin_bottom = 74.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
pressed = true
enabled_focus_mode = 0
text = "Music"

[node name="CenterContainer4" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3"]
margin_top = 71.0
margin_right = 96.0
margin_bottom = 101.0

[node name="BackBTN" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3/CenterContainer4"]
margin_left = 31.0
margin_right = 64.0
margin_bottom = 30.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
group = ExtResource( 4 )
text = "Back"

[node name="Illustration" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 226.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer/BeginBTN" to="." method="_on_BeginBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer3/OptionsBTN" to="." method="_on_OptionsBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer/CenterContainer2/QuitBTN" to="." method="_on_QuitBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer/SizeSmallBTN" to="." method="_on_SizeSmallBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer2/SizeMedBTN" to="." method="_on_SizeMedBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer3/SizeLargeBTN" to="." method="_on_SizeLargeBTN_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer2/CenterContainer4/BackBTN" to="." method="_on_BackBTN_pressed"]
[connection signal="toggled" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3/MusicCHBTN" to="." method="_on_MusicCHBTN_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3/SfxCHBTN" to="." method="_on_SfxCHBTN_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/VBoxContainer3/CenterContainer4/BackBTN" to="." method="_on_BackBTN_pressed"]
